completed individual team templates, still need to do the home page

--- a/js/home/homeTmpl.html
+++ b/js/home/homeTmpl.html
@@ -1,3 +1,7 @@
-<div class="inner-container">
+<div class="inner-container"> 
 
-</div>
+	<div ng-repeat="teams in teamData"> 
+
+	</div>
+
+</div> 
