--- a/js/home/homeTmpl.html
+++ b/js/home/homeTmpl.html
@@ -1,6 +1,9 @@
 <div class="inner-container"> 
 
-	<div ng-repeat="teams in teamData"> 
+	<div ng-repeat="teams in teamData">
+		<div class="logo">
+				<img src="image in images">
+		</div> 
 
 	</div>
 
